# asl-zello-bridge

./: .gitignore  Dockerfile  README.md  asl-zello-bridge.service  flake.nix  pyproject.toml  setup.py
asl_zello_bridge/: __main__.py  stream.py  usrp.py  zello.py
docker/: Dockerfile  entrypoint
